--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -26,6 +26,8 @@
   margin: 0;
   text-align: left;
   width: 200px;
+  position: relative;
+  z-index: 1;
 }
 
 .program__desc {
@@ -41,6 +43,14 @@
   justify-content: space-between;
   align-items: center;
 }
+
+
+@media (max-width: @mobile-width-only) {
+  .program__number {
+    display: none;
+  }
+}
+
 
 @media (min-width: @tablet-width) {
   .program__enumeration {
@@ -65,8 +75,21 @@
 
   .program__desc--useful {
     display: grid;
-    grid-template-columns: 230px;
+    grid-template-columns: 247px;
     gap: 31px;
+    position: relative;
+    z-index: 1;
+  }
+
+  .program__number {
+    position: absolute;
+    font-family: "Oswald", sans-serif;
+    font-size: 280px;
+    line-height: 280px;
+    left: 120px;
+    top: -41px;
+    z-index: 0;
+    color: @color-grey;
   }
 
   .program__text {
@@ -85,6 +108,58 @@
     display: flex;
     padding-bottom: 72px;
   }
+
+  // .program__text--one,
+  // .program__text--two,
+  // .program__text--three,
+  // .program__text--four {
+  //   position: relative;
+  //   z-index: 1;
+  // }
+
+  // .program__one-figure {
+  //   font-family: "Oswald", sans-serif;
+  //   position: absolute;
+  //   font-size: 280px;
+  //   line-height: 280px;
+  //   left: 120px;
+  //   top: 94px;
+  //   z-index: 0;
+  //   color: @color-grey;
+  // }
+
+  // .program__two-figure {
+  //   font-family: "Oswald", sans-serif;
+  //   position: absolute;
+  //   font-size: 280px;
+  //   line-height: 280px;
+  //   right: 71px;
+  //   top: 94px;
+  //   z-index: 0;
+  //   color: @color-grey;
+  // }
+
+  // .program__three-figure {
+  //   font-family: "Oswald", sans-serif;
+  //   position: absolute;
+  //   font-size: 280px;
+  //   line-height: 280px;
+  //   bottom: -78px;
+  //   left: 97px;
+  //   z-index: 0;
+  //   color: @color-grey;
+  // }
+
+  // .program__four-figure {
+  //   font-family: "Oswald", sans-serif;
+  //   position: absolute;
+  //   font-size: 280px;
+  //   line-height: 280px;
+  //   bottom: -78px;
+  //   right: 61px;
+  //   z-index: 0;
+  //   color: @color-grey;
+  // }
 }
 
 @media (min-width: @desktop-width) {
