--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,4 +1,5 @@
 @color-white: #ffffff;
+@color-light-grey: #e7e7e7;
 @color-dark-grey: #444444;
 @color-green: #68b738;
 @color-grey: #f2f2f2;
@@ -7,6 +8,7 @@
 @color-grey-3: #d9d9d9;
 @color-background: #ebebeb;
 @color-light-black: #111111;
+@color-special-grey: #cdcdcd;
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
